docs: fix hero button vertical align

--- a/website/theme/components/Landingpage/Hero/index.module.scss
+++ b/website/theme/components/Landingpage/Hero/index.module.scss
@@ -130,7 +130,6 @@
 
 .button {
   display: flex;
-  flex-direction: column;
   align-items: center;
   gap: 10px;
   padding: 12px 24px 12px 24px;
